tests/expectations/parser/expression/binary/eq_fail.out
namespace = "ParseExpression"
expectation = "Fail"
outputs = ["""
Error [EPAR0370017]: Could not parse the implicit value: 1.
    --> test:1:1
     |
   1 | 1 == 2 == 3
     | ^"""]
